--- a/TestAutomationJNJ/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestAutomationJNJ/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be7b63">  <td>20/10/10 08:12:02</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@6e2aa843]">&gt;&gt;Extent_Report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@127791068</td>   <td></td> </tr>
-<tr bgcolor="be7b63">  <td>20/10/10 08:12:09</td>   <td>6847</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@6e2aa843]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@127791068</td>   <td></td> </tr>
-<tr bgcolor="e8a263">  <td>20/10/10 08:12:02</td>   <td>280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLogin()[pri:0, instance:Scenario_Component.LaunchUrl@6e2aa843]">testLogin</td> 
-  <td>main@127791068</td>   <td></td> </tr>
+<tr bgcolor="be7b63">  <td>20/10/11 09:12:56</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&gt;&gt;Extent_Report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
+<tr bgcolor="be7b63">  <td>20/10/11 09:12:56</td>   <td>314</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.setUp()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
+<tr bgcolor="be7b63">  <td>20/10/11 09:13:03</td>   <td>6989</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
+<tr bgcolor="e8a263">  <td>20/10/11 09:13:03</td>   <td>6929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLogin()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">testLogin</td> 
+  <td>main@1309335839</td>   <td></td> </tr>
 </table>
