--- a/TestAutomationJNJ/test-output/old/Default suite/methods.html
+++ b/TestAutomationJNJ/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be7b63">  <td>20/10/11 15:39:09</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&gt;&gt;Extent_Report</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
-<tr bgcolor="be7b63">  <td>20/10/11 15:39:09</td>   <td>279</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.setUp()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
-<tr bgcolor="e8a263">  <td>20/10/11 15:39:16</td>   <td>6971</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLogin()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">testLogin</td> 
-  <td>main@1309335839</td>   <td></td> </tr>
-<tr bgcolor="be7b63">  <td>20/10/11 15:39:16</td>   <td>7578</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@f58853c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1309335839</td>   <td></td> </tr>
+<tr bgcolor="e1f6c7">  <td>20/10/18 08:26:37</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@2c78324b]">&gt;&gt;Extent_Report</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052317717</td>   <td></td> </tr>
+<tr bgcolor="e1f6c7">  <td>20/10/18 08:26:38</td>   <td>364</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.setUp()[pri:0, instance:Scenario_Component.LaunchUrl@2c78324b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052317717</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>20/10/18 08:26:47</td>   <td>9389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLogin()[pri:0, instance:Scenario_Component.LaunchUrl@2c78324b]">testLogin</td> 
+  <td>main@1052317717</td>   <td></td> </tr>
+<tr bgcolor="e1f6c7">  <td>20/10/18 08:27:07</td>   <td>29312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@2c78324b]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1052317717</td>   <td></td> </tr>
+<tr bgcolor="e1f6c7">  <td>20/10/18 08:27:07</td>   <td>29492</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@2c78324b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1052317717</td>   <td></td> </tr>
 </table>
