--- a/TestAutomationJNJ/test-output/old/Suite/classes.html
+++ b/TestAutomationJNJ/test-output/old/Suite/classes.html
@@ -11,23 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testCaseIntake</td>
+<td>testCase1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>testLaunchUrl</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testLoginLogout</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testAerRegistration</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testFullDataEntry</td>
+<td>testLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
