--- a/TestAutomationJNJ/test-output/emailable-report.html
+++ b/TestAutomationJNJ/test-output/emailable-report.html
@@ -9,41 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num attn">1</td><td class="num">27,799</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">69,760</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Scenario_Component.LaunchUrl</td><td><a href="#m0">testCaseIntake</a></td><td rowspan="1">1604717825141</td><td rowspan="1">9</td></tr><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">Scenario_Component.LaunchUrl</td><td><a href="#m1">testAerRegistration</a></td><td rowspan="1">1604717811398</td><td rowspan="1">13737</td></tr><tr class="passedeven"><td><a href="#m2">testFullDataEntry</a></td><td rowspan="1">1604717825175</td><td rowspan="1">77</td></tr><tr class="passedeven"><td><a href="#m3">testLaunchUrl</a></td><td rowspan="1">1604717800309</td><td rowspan="1">122</td></tr><tr class="passedeven"><td><a href="#m4">testLoginLogout</a></td><td rowspan="1">1604717800778</td><td rowspan="1">10616</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">Scenario_Component.LaunchUrl</td><td><a href="#m0">testAerRegistration</a></td><td rowspan="1">1605060971663</td><td rowspan="1">13320</td></tr><tr class="passedeven"><td><a href="#m1">testCaseIntake</a></td><td rowspan="1">1605060984986</td><td rowspan="1">6803</td></tr><tr class="passedeven"><td><a href="#m2">testFullDataEntry</a></td><td rowspan="1">1605060991803</td><td rowspan="1">32824</td></tr><tr class="passedeven"><td><a href="#m3">testLaunchUrl</a></td><td rowspan="1">1605060958779</td><td rowspan="1">138</td></tr><tr class="passedeven"><td><a href="#m4">testLoginLogout</a></td><td rowspan="1">1605060959320</td><td rowspan="1">12335</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Scenario_Component.LaunchUrl#testCaseIntake</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at PageObject_Component.CaseIntake.NavigateToFullDateEntry(CaseIntake.java:30)
-	at Scenario_Component.LaunchUrl.testCaseIntake(LaunchUrl.java:180)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">Scenario_Component.LaunchUrl#testAerRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">Scenario_Component.LaunchUrl#testFullDataEntry</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Scenario_Component.LaunchUrl#testAerRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Scenario_Component.LaunchUrl#testCaseIntake</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Scenario_Component.LaunchUrl#testFullDataEntry</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Creation, Primary_SrcCountry =Jordan}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">Scenario_Component.LaunchUrl#testLaunchUrl</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m4">Scenario_Component.LaunchUrl#testLoginLogout</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{Execute_Flag=Y, Script_Name=User_Login, User_name=RAGDPUSER, TC_ID=JNJ_01, Database=AG74401_DP_128, User_Password=Password6}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
