--- a/TestAutomationJNJ/test-output/index.html
+++ b/TestAutomationJNJ/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\00002453\AppData\Local\Temp\testng-eclipse-592717830\testng-customsuite.xml</span>
+                    <span>C:\Users\00002453\AppData\Local\Temp\testng-eclipse-1186850983\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods, 1 failed,   4 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Default_suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Scenario_Component.LaunchUrl" hash-for-method="testCaseIntake">testCaseIntake</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -121,7 +107,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Scenario_Component.LaunchUrl" hash-for-method="testFullDataEntry">testFullDataEntry</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Scenario_Component.LaunchUrl" hash-for-method="testCaseIntake">testCaseIntake</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="Scenario_Component.LaunchUrl" hash-for-method="testFullDataEntry({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Cr...)">testFullDataEntry({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Cr...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -146,51 +137,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">Scenario_Component.LaunchUrl</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testCaseIntake">
-                  </a> <!-- testCaseIntake -->
-                  <span class="method-name">testCaseIntake</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at PageObject_Component.CaseIntake.NavigateToFullDateEntry(CaseIntake.java:30)
-	at Scenario_Component.LaunchUrl.testCaseIntake(LaunchUrl.java:180)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
-	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
-	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -206,9 +152,17 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testFullDataEntry">
-                  </a> <!-- testFullDataEntry -->
+                  <a name="testCaseIntake">
+                  </a> <!-- testCaseIntake -->
+                  <span class="method-name">testCaseIntake</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testFullDataEntry({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Cr...)">
+                  </a> <!-- testFullDataEntry({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Cr...) -->
                   <span class="method-name">testFullDataEntry</span>
+                  <span class="parameters">({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Creation, Primary_SrcCountry =Jordan})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -231,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\00002453\AppData\Local\Temp\testng-eclipse-592717830\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\00002453\AppData\Local\Temp\testng-eclipse-1186850983\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -282,30 +236,30 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testAerRegistration')
+data.setCell(0, 1, 'testFullDataEntry')
 data.setCell(0, 2, 'Scenario_Component.LaunchUrl')
-data.setCell(0, 3, 13737);
+data.setCell(0, 3, 32824);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testLoginLogout')
+data.setCell(1, 1, 'testAerRegistration')
 data.setCell(1, 2, 'Scenario_Component.LaunchUrl')
-data.setCell(1, 3, 10616);
+data.setCell(1, 3, 13320);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testLaunchUrl')
+data.setCell(2, 1, 'testLoginLogout')
 data.setCell(2, 2, 'Scenario_Component.LaunchUrl')
-data.setCell(2, 3, 122);
+data.setCell(2, 3, 12335);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testFullDataEntry')
+data.setCell(3, 1, 'testCaseIntake')
 data.setCell(3, 2, 'Scenario_Component.LaunchUrl')
-data.setCell(3, 3, 77);
+data.setCell(3, 3, 6803);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testCaseIntake')
+data.setCell(4, 1, 'testLaunchUrl')
 data.setCell(4, 2, 'Scenario_Component.LaunchUrl')
-data.setCell(4, 3, 9);
+data.setCell(4, 3, 138);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -338,53 +292,51 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-class before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">317 ms</span>
+                <span class="method-start">309 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">testLaunchUrl</span>
-                <span class="method-start">3146 ms</span>
+                <span class="method-start">4202 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=testLaunchUrl status=SUCCESS method=LaunchUrl.testLaunchUrl()[pri:1, instance:Scena...)</span>
-                <span class="method-start">3272 ms</span>
+                <span class="method-start">4345 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">testLoginLogout({Execute_Flag=Y, Script_Name=User_Login, User_name=RAGDPUSER, TC_ID=JNJ_01, Database=AG74401_DP_128,...)</span>
-                <span class="method-start">3615 ms</span>
+                <span class="method-start">4743 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=testLoginLogout status=SUCCESS method=LaunchUrl.testLoginLogout(java.util.Map)[pri:...)</span>
-                <span class="method-start">14233 ms</span>
+                <span class="method-start">17078 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
                 <span class="method-name">testAerRegistration</span>
-                <span class="method-start">14235 ms</span>
+                <span class="method-start">17086 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">getResult([TestResult name=testAerRegistration status=SUCCESS method=LaunchUrl.testAerRegistration()[pri:3, in...)</span>
-                <span class="method-start">27976 ms</span>
+                <span class="method-start">30408 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">testCaseIntake</span>
-                <span class="method-start">27978 ms</span>
+                <span class="method-start">30409 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=testCaseIntake status=FAILURE method=LaunchUrl.testCaseIntake()[pri:4, instance:Sce...)</span>
-                <span class="method-start">28001 ms</span>
+                <span class="method-name">getResult([TestResult name=testCaseIntake status=SUCCESS method=LaunchUrl.testCaseIntake()[pri:4, instance:Sce...)</span>
+                <span class="method-start">37214 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">testFullDataEntry</span>
-                <span class="method-start">28012 ms</span>
+                <span class="method-name">testFullDataEntry({Execute_Flag=Y, Reported_term =COLD, Product_Description =ANACIN, TC_ID=JNJ_02, Script_name=Case_Cr...)</span>
+                <span class="method-start">37226 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">getResult([TestResult name=testFullDataEntry status=SUCCESS method=LaunchUrl.testFullDataEntry()[pri:5, instan...)</span>
-                <span class="method-start">28091 ms</span>
+                <span class="method-name">getResult([TestResult name=testFullDataEntry status=SUCCESS method=LaunchUrl.testFullDataEntry(java.util.Map)[...)</span>
+                <span class="method-start">70052 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28138 ms</span>
+                <span class="method-start">70091 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
