--- a/TestAutomationJNJ/test-output/old/Default suite/methods.html
+++ b/TestAutomationJNJ/test-output/old/Default suite/methods.html
@@ -1,30 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:26:37</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&gt;&gt;Extent_Report</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:45:54</td>   <td>0</td> <td title="&gt;&gt;Base_Class.Extent_Report()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&gt;&gt;Extent_Report</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:26:37</td>   <td>303</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.setUp()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&gt;&gt;setUp</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:45:54</td>   <td>299</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base_Class.setUp()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>20/11/07 08:26:40</td>   <td>3132</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLaunchUrl()[pri:1, instance:Scenario_Component.LaunchUrl@1e127982]">testLaunchUrl</td> 
+<tr bgcolor="98978d">  <td>20/11/11 07:45:58</td>   <td>4192</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLaunchUrl()[pri:1, instance:Scenario_Component.LaunchUrl@1e127982]">testLaunchUrl</td> 
   <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:26:40</td>   <td>3260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:45:58</td>   <td>4336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>20/11/07 08:26:40</td>   <td>3601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLoginLogout(java.util.Map)[pri:2, instance:Scenario_Component.LaunchUrl@1e127982]">testLoginLogout</td> 
+<tr bgcolor="98978d">  <td>20/11/11 07:45:59</td>   <td>4733</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testLoginLogout(java.util.Map)[pri:2, instance:Scenario_Component.LaunchUrl@1e127982]">testLoginLogout</td> 
   <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:26:51</td>   <td>14220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:46:11</td>   <td>17068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>20/11/07 08:26:51</td>   <td>14221</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testAerRegistration()[pri:3, instance:Scenario_Component.LaunchUrl@1e127982]">testAerRegistration</td> 
+<tr bgcolor="98978d">  <td>20/11/11 07:46:11</td>   <td>17076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testAerRegistration()[pri:3, instance:Scenario_Component.LaunchUrl@1e127982]">testAerRegistration</td> 
   <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:27:05</td>   <td>27962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:46:24</td>   <td>30398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>20/11/07 08:27:05</td>   <td>27964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testCaseIntake()[pri:4, instance:Scenario_Component.LaunchUrl@1e127982]">testCaseIntake</td> 
+<tr bgcolor="98978d">  <td>20/11/11 07:46:24</td>   <td>30399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testCaseIntake()[pri:4, instance:Scenario_Component.LaunchUrl@1e127982]">testCaseIntake</td> 
   <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:27:05</td>   <td>27988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:46:31</td>   <td>37205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="98978d">  <td>20/11/07 08:27:05</td>   <td>27998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testFullDataEntry()[pri:5, instance:Scenario_Component.LaunchUrl@1e127982]">testFullDataEntry</td> 
+<tr bgcolor="98978d">  <td>20/11/11 07:46:31</td>   <td>37216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LaunchUrl.testFullDataEntry(java.util.Map)[pri:5, instance:Scenario_Component.LaunchUrl@1e127982]">testFullDataEntry</td> 
   <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:27:05</td>   <td>28078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:47:04</td>   <td>70042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base_Class.getResult(org.testng.ITestResult)[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/11/07 08:27:05</td>   <td>28124</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;tearDown</td> 
+<tr bgcolor="9bd5b0">  <td>20/11/11 07:47:04</td>   <td>70081</td> <td title="&lt;&lt;Base_Class.tearDown()[pri:0, instance:Scenario_Component.LaunchUrl@1e127982]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846412426</td>   <td></td> </tr>
 </table>
